--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
   @apply bg-grey-100;
 }
@@ -64,3 +65,72 @@ body {
   min-height: 100vh;
 }
 
+.empty-container {
+  min-height: calc(100vh - 230px);
+}
+
+.search-input {
+  border-radius: 4px !important;
+  position: relative;
+  padding-left: 32px;
+  outline: none;
+  border: none;
+  background: #414141;
+  color: #fff;
+  height: calc(1.8125rem + 2px);
+  padding: .25rem .5rem .25rem 2rem;
+  font-size: .95rem;
+  line-height: 1.5;
+  flex: 1 1 auto;
+  min-width: 300px;
+}
+
+.search-input:focus {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+}
+
+.search-input::placeholder {
+  color: rgba(255, 255, 255, .5);
+}
+
+.search-icon {
+  width: 1.82rem;
+  height: 1.82rem;
+  padding: 0.1rem 0.2rem 0.2rem 0.2rem;
+  fill: rgba(255, 255, 255, .5);
+  cursor: pointer;
+}
+
+.search-icon:hover {
+  transform: scale(1.1);
+}
+
+.fl-item {
+  transform: scale(0.9);
+  z-index: 3;
+}
+
+.back-btn {
+  position: fixed;
+  bottom: 2rem;
+  left: 1.4rem;
+  width: 2.4rem;
+  height: 2rem;
+  background: white;
+  border-radius: 50%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12), 0 16px 16px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+}
+
+.back-btn:hover {
+  transform: scale(1.1);
+}
+
+.back-btn svg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  fill: #211e1e;
+  width: 25px;
+}
