--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ body {
 }
 
 .empty-container {
-  min-height: calc(100vh - 230px);
+  min-height: calc(100vh - 352px);
 }
 
 .search-input {
@@ -83,6 +83,16 @@ body {
   line-height: 1.5;
   flex: 1 1 auto;
   min-width: 300px;
+}
+
+.h-filter-group {
+  min-width: 320px;
+  z-index: 4;
+}
+
+.h-filter>div {
+  background-color: #414141;
+  color: #8e8d8d
 }
 
 .search-input:focus {
